rns-lang/tests/snapshots/diagnostic/err-lexer-directives-dot_inteface.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.interface
----- STDOUT -----

----- STDERR -----
Error: unknown directive
   ╭─[ test_data/diagnostic/err/lexer/directives/dot_inteface.ja:1:1 ]
   │
 1 │ .interface
   │ ─────┬────  
   │      ╰────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
