rns-lang/tests/snapshots/diagnostic/err-parser-class_directive-header-name-dot_method_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public .method main([Ljava/lang/String;)V

----- STDOUT -----

----- STDERR -----
Error: cannot use directive '.method' as a class name
   ╭─[ test_data/diagnostic/err/parser/class_directive/header/name/dot_method_as_class_name.ja:1:15 ]
   │
 1 │ .class public .method main([Ljava/lang/String;)V
   │               ───┬───  
   │                  ╰───── directives cannot be used as names
   │ 
   │ Note: Directives are reserved keywords. If you meant to start a new directive, do so on a new line.
───╯
