rns-lang/tests/snapshots/diagnostic/err-parser-class_directive-header-trailing_tokens-enum_keyword.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class HelloWorld enum
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: unexpected keyword after class name
   ╭─[ test_data/diagnostic/err/parser/class_directive/header/trailing_tokens/enum_keyword.ja:1:19 ]
   │
 1 │ .class HelloWorld enum
   │                   ──┬─  
   │                     ╰─── access flags must appear before the class name
   │ 
   │ Note: Access flags must appear before the class name: '.class [access_flags] <name>'
───╯
